# sagemaker-jobs

./: LICENSE  README.rst  setup.cfg  setup.py
sagemaker_jobs/: __init__.py  constants.py  sagemaker_training_job.py
sagemaker_jobs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
