[metadata]
name = sagemaker-jobs
version = 0.1
description = A Python library that contains abstracted sagemaker methods for easy use
long_description = file: README.rst
url = https://www.squadstack.com/
author = SquadStack
author_email = devs@squadstack.com
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

